--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "proxy": "http://localhost:8000",
     "dependencies": {
         "axios": "^0.20.0",
+        "connected-react-router": "^6.8.0",
         "enzyme": "^3.11.0",
         "enzyme-adapter-react-16": "^1.15.4",
         "json-server": "^0.16.1",
